# pyscid

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_READY.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  UPLOAD_NOW.md  build_package.sh  pyproject.toml  setup.py
pyscid/: __init__.py  board.py  database.py  date.py  game.py  gamedata.py  namebase_interface.py  pgn.py  scid4.py  scid5.py  types.py
pyscid/examples/: basic_usage.py
tests/: test_basic.py
